; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_dc-capture.c_dc_capture_render.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_dc-capture.c_dc_capture_render.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dc_capture = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dc_capture_render(%struct.dc_capture* %0, i32* %1) #0 {
  %3 = alloca %struct.dc_capture*, align 8
  %4 = alloca i32*, align 8
  store %struct.dc_capture* %0, %struct.dc_capture** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.dc_capture*, %struct.dc_capture** %3, align 8
  %6 = getelementptr inbounds %struct.dc_capture, %struct.dc_capture* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %18

9:                                                ; preds = %2
  %10 = load %struct.dc_capture*, %struct.dc_capture** %3, align 8
  %11 = getelementptr inbounds %struct.dc_capture, %struct.dc_capture* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %9
  %15 = load %struct.dc_capture*, %struct.dc_capture** %3, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @draw_texture(%struct.dc_capture* %15, i32* %16)
  br label %18

18:                                               ; preds = %14, %9, %2
  ret void
}

declare dso_local i32 @draw_texture(%struct.dc_capture*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
